# gaga-phsp

./: .gitignore  .gitmodules  pyproject.toml  readme.md  readme_dev.md  readme_dev.txt  setup.py
.github/workflows/: main.yml
gaga/: __init__.py  gaga.py  gaga2.py  gaga_functions.py  gaga_helpers.py  gaga_helpers2.py  gaga_helpers_pet.py  gaga_helpers_plot.py  gaga_model.py  gaga_model_v2.py  gaga_model_v3.py
gaga_phsp/: __init__.py  gaga.py  gaga_functions.py  gaga_helpers.py  gaga_helpers_gate.py  gaga_helpers_pet.py  gaga_helpers_plot.py  gaga_helpers_spect.py  gaga_helpers_tests.py  gaga_model.py  spect_intevo_helpers.py
gaga_phsp_tests/data/: a_with_pairs.json
gaga_phsp_tests/mac/: cylinder_phsp.mac  main_NECR_from_phsp.mac  pet_geometry.mac  source_NECR_gan.mac
src/: __init__.py  gaga.py  gaga_functions.py  gaga_helpers.py  gaga_helpers2.py  gaga_model.py  sinkhorn.py
tests/: g1.json  g1_vd.json  readme_gaga_phsp_tests.md  readme_tests.md  shape.py  test001_non_cond.py  test002_cond.py  test003_param.py  test004_main1_ref.py  test004_main2_garf.py  test004_main3_gaga.py  test004_main4_standalone_numpy.py  test004_main5_standalone_torch.py  test005_pairs.py  test006_helpers.py  test006_pos_enc.py
tests/data/: GateMaterials_save.db
tests/json/: a.json  cg1.json  g1.json  g2.json  test006_pos_enc.json
tests/mac/: actors.mac  detector.mac  main_NECR_from_gan.mac  output_NECR_phsp.mac  output_pet.mac  world.mac
